--- a/hw3-2_lib_jgkim.html
+++ b/hw3-2_lib_jgkim.html
@@ -8,4 +8,15 @@
 <body>
 
 </body>
+<script>
+    object.getName();
+
+    var num1 = 15;
+    var num2 = 22;
+    var op = "+";
+    var calculator = mathObj.getCalculator(op);
+    var comp = document.getElementById("result");
+    calculator.calculate(num1, num2, comp);
+
+</script>
 </html>
